--- a/now.json
+++ b/now.json
@@ -1,9 +1,12 @@
 {
-    "version": 2,
-    "name": "addon-parser",
-    "scope": "webcreationclub",
-    "builds": [
-        { "src": "**/*.js", "use": "@now/node" }
-    ],
-    "alias": "addon-parser-armaldio.webcreationclub.now.sh"
+  "version": 2,
+  "name": "addon-parser",
+  "scope": "webcreationclub",
+  "builds": [
+    {
+      "src": "**/*.js",
+      "use": "@now/node"
+    }
+  ],
+  "alias": "addon-parser-armaldio.webcreationclub.now.sh"
 }
