potential route fix

--- a/now.json
+++ b/now.json
@@ -8,5 +8,9 @@
       "use": "@now/node"
     }
   ],
+  "routes": [{
+    "src": "/.*",
+    "dest": "/index.js"
+  }],
   "alias": "addon-parser-armaldio.webcreationclub.now.sh"
 }
