--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "^4.16.4",
     "helmet": "^3.16.0",
     "multer": "^1.4.1",
+    "require-from-string": "^2.0.2",
     "shelljs": "^0.8.3",
     "uuid": "^3.3.2"
   },
