--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.16.4",
+    "extract-zip": "^1.6.7",
     "helmet": "^3.16.0",
     "multer": "^1.4.1",
+    "recursive-readdir": "^2.2.2",
     "require-from-string": "^2.0.2",
     "shelljs": "^0.8.3",
     "uuid": "^3.3.2"
