--- a/now.json
+++ b/now.json
@@ -4,7 +4,7 @@
   "scope": "webcreationclub",
   "builds": [
     {
-      "src": "**/*.js",
+      "src": "index.js",
       "use": "@now/node"
     }
   ],
